--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
   },
   "autoload": {
     "psr-4": {
-      "Greg\\AppDebugBar\\": "src/"
+      "Greg\\AppStaticImage\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Greg\\AppDebugBar\\": "tests/"
+      "Greg\\AppStaticImage\\": "tests/"
     }
   }
 }
