--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "greg-md/php-app-static-image",
+  "name": "greg-md/php-app-imagix",
   "type": "library",
-  "description": "Integration of PHP Static Image in Greg PHP Application.",
-  "keywords": [ "greg-md", "greg-php", "php-app-static-image", "greg-app-static-image", "app-static-image", "static-image", "php", "web-artisans" ],
-  "homepage": "https://github.com/greg-md/php-app-static-image",
+  "description": "Integration of PHP Imagix in Greg PHP Application.",
+  "keywords": [ "greg-md", "greg-php", "php-app-imagix", "greg-app-imagix", "app-imagix", "imagix", "php", "web-artisans" ],
+  "homepage": "https://github.com/greg-md/php-app-imagix",
   "license": "MIT",
   "authors": [
     { "name": "Grigorii Duca", "email": "contact@greg.md", "homepage": "http://greg.md/" }
@@ -12,20 +12,20 @@
   "require": {
     "php": "^7.1",
     "greg-md/php-app-installer": "dev-master",
-    "greg-md/php-static-image": "dev-master"
+    "greg-md/php-imagix": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.2.*",
+    "phpunit/phpunit": "6.3.*",
     "symfony/var-dumper": "^3.2"
   },
   "autoload": {
     "psr-4": {
-      "Greg\\AppStaticImage\\": "src/"
+      "Greg\\AppImagix\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Greg\\AppStaticImage\\": "tests/"
+      "Greg\\AppImagix\\": "tests/"
     }
   }
 }
